Cosmetic tag for Baltic Federation not BAT_confederation but BAT_FED

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -367,36 +367,71 @@ SPR_republic_totalist:0 "Spanish Republic"
 SPR_republic_totalist_ADJ:0 "Spanish"
 SPR_republic_totalist_DEF:0 "the Spanish Republic"
 
-BAT_confederation_authoritarian_democrat:0 "Baltic Confederation"
-BAT_confederation_authoritarian_democrat_ADJ:0 "Baltic"
-BAT_confederation_authoritarian_democrat_DEF:0 "the Baltic Confederation"
-BAT_confederation_market_liberal:0 "Baltic Confederation"
-BAT_confederation_market_liberal_ADJ:0 "Baltic"
-BAT_confederation_market_liberal_DEF:0 "the Baltic Confederation"
-BAT_confederation_national_populist:0 "Baltic Confederation"
-BAT_confederation_national_populist_ADJ:0 "Baltic"
-BAT_confederation_national_populist_DEF:0 "the Baltic Confederation"
-BAT_confederation_paternal_autocrat:0 "Baltic Confederation"
-BAT_confederation_paternal_autocrat_ADJ:0 "Baltic"
-BAT_confederation_paternal_autocrat_DEF:0 "the Baltic Confederation"
-BAT_confederation_radical_socialist:0 "Baltic Confederation"
-BAT_confederation_radical_socialist_ADJ:0 "Baltic"
-BAT_confederation_radical_socialist_DEF:0 "Baltic Confederation"
-BAT_confederation_social_conservative:0 "Baltic Confederation"
-BAT_confederation_social_conservative_ADJ:0 "Baltic"
-BAT_confederation_social_conservative_DEF:0 "the Baltic Confederation"
-BAT_confederation_social_democrat:0 "Baltic Confederation"
-BAT_confederation_social_democrat_ADJ:0 "Baltic"
-BAT_confederation_social_democrat_DEF:0 "the Baltic Confederation"
-BAT_confederation_social_liberal:0 "Baltic Confederation"
-BAT_confederation_social_liberal_ADJ:0 "Baltic"
-BAT_confederation_social_liberal_DEF:0 "the Baltic Confederation"
-BAT_confederation_syndicalist:0 "Baltic Confederation"
-BAT_confederation_syndicalist_ADJ:0 "Baltic"
-BAT_confederation_syndicalist_DEF:0 "the Baltic Confederation"
-BAT_confederation_totalist:0 "Baltic Confederation"
-BAT_confederation_totalist_ADJ:0 "Baltic"
-BAT_confederation_totalist_DEF:0 "the Baltic Confederation"
+BAT_FED_authoritarian_democrat:0 "Baltic Federation"
+BAT_FED_authoritarian_democrat_ADJ:0 "Baltic"
+BAT_FED_authoritarian_democrat_DEF:0 "the Baltic Federation"
+BAT_FED_market_liberal:0 "Baltic Federation"
+BAT_FED_market_liberal_ADJ:0 "Baltic"
+BAT_FED_market_liberal_DEF:0 "the Baltic Federation"
+BAT_FED_national_populist:0 "Baltic Federation"
+BAT_FED_national_populist_ADJ:0 "Baltic"
+BAT_FED_national_populist_DEF:0 "the Baltic Federation"
+BAT_FED_paternal_autocrat:0 "Baltic Federation"
+BAT_FED_paternal_autocrat_ADJ:0 "Baltic"
+BAT_FED_paternal_autocrat_DEF:0 "the Baltic Federation"
+BAT_FED_radical_socialist:0 "Baltic Federation"
+BAT_FED_radical_socialist_ADJ:0 "Baltic"
+BAT_FED_radical_socialist_DEF:0 "Baltic Federation"
+BAT_FED_social_conservative:0 "Baltic Federation"
+BAT_FED_social_conservative_ADJ:0 "Baltic"
+BAT_FED_social_conservative_DEF:0 "the Baltic Federation"
+BAT_FED_social_democrat:0 "Baltic Federation"
+BAT_FED_social_democrat_ADJ:0 "Baltic"
+BAT_FED_social_democrat_DEF:0 "the Baltic Federation"
+BAT_FED_social_liberal:0 "Baltic Federation"
+BAT_FED_social_liberal_ADJ:0 "Baltic"
+BAT_FED_social_liberal_DEF:0 "the Baltic Federation"
+BAT_FED_syndicalist:0 "Baltic Federation"
+BAT_FED_syndicalist_ADJ:0 "Baltic"
+BAT_FED_syndicalist_DEF:0 "the Baltic Federation"
+BAT_FED_totalist:0 "Baltic Federation"
+BAT_FED_totalist_ADJ:0 "Baltic"
+BAT_FED_totalist_DEF:0 "the Baltic Federation"
+
+BAT_PRI_authoritarian_democrat:0 "Pribaltika"
+BAT_PRI_authoritarian_democrat_ADJ:0 "Baltic"
+BAT_PRI_authoritarian_democrat_DEF:0 "the Pribaltika"
+BAT_PRI_market_liberal:0 "Pribaltika"
+BAT_PRI_market_liberal_ADJ:0 "Baltic"
+BAT_PRI_market_liberal_DEF:0 "the Pribaltika"
+BAT_PRI_national_populist:0 "Pribaltika"
+BAT_PRI_national_populist_ADJ:0 "Baltic"
+BAT_PRI_national_populist_DEF:0 "the Pribaltika"
+BAT_PRI_paternal_autocrat:0 "Pribaltika"
+BAT_PRI_paternal_autocrat_ADJ:0 "Baltic"
+BAT_PRI_paternal_autocrat_DEF:0 "the Pribaltika"
+BAT_PRI_radical_socialist:0 "Pribaltika"
+BAT_PRI_radical_socialist_ADJ:0 "Baltic"
+BAT_PRI_radical_socialist_DEF:0 "the Pribaltika"
+BAT_PRI_social_conservative:0 "Pribaltika"
+BAT_PRI_social_conservative_ADJ:0 "Baltic"
+BAT_PRI_social_conservative_DEF:0 "the Pribaltika"
+BAT_PRI_social_democrat:0 "Pribaltika"
+BAT_PRI_social_democrat_ADJ:0 "Baltic"
+BAT_PRI_social_democrat_DEF:0 "the Pribaltika"
+BAT_PRI_social_liberal:0 "Pribaltika"
+BAT_PRI_social_liberal_ADJ:0 "Baltic"
+BAT_PRI_social_liberal_DEF:0 "the Pribaltika"
+BAT_PRI_syndicalist:0 "Pribaltika"
+BAT_PRI_syndicalist_ADJ:0 "Baltic"
+BAT_PRI_syndicalist_DEF:0 "the Pribaltika"
+BAT_PRI_totalist:0 "Pribaltika"
+BAT_PRI_totalist_ADJ:0 "Baltic"
+BAT_PRI_totalist_DEF:0 "the Pribaltika"
+
+BAT_GER_paternal_autocrat:0 "Baltisches Staat"
+BAT_GER_paternal_autocrat_ADJ:0 "Baltic"
+BAT_GER_paternal_autocrat_DEF:0 "the Baltisches Staat"
 
 ITA_kingdom_authoritarian_democrat:0 "Kingdom of Italy"
 ITA_kingdom_authoritarian_democrat_ADJ:0 "Italian"
@@ -1580,6 +1615,68 @@ SAF_republic_syndicalist_DEF:0 "the Cape Commune"
 SAF_republic_totalist:0 "Cape Commune"
 SAF_republic_totalist_ADJ:0 "South African"
 SAF_republic_totalist_DEF:0 "the Cape Commune"
+
+TRM_FE_totalist:0 "Far Eastern Union"
+TRM_FE_totalist_ADJ:0 "Far Eastern"
+TRM_FE_totalist_DEF:0 "the Far Eastern Union"
+TRM_FE_radical_socialist:0 "Far Eastern Socialist Republic"
+TRM_FE_radical_socialist_ADJ:0 "Far Eastern"
+TRM_FE_radical_socialist_DEF:0 "the Far Eastern Socialist Republic"
+TRM_FE_syndicalist:0 "Far Eastern Commune"
+TRM_FE_syndicalist_ADJ:0 "Far Eastern"
+TRM_FE_syndicalist_DEF:0 "the Far Eastern Commune"
+TRM_FE_social_democrat:0 "Far Eastern Republic"
+TRM_FE_social_democrat_ADJ:0 "Far Eastern"
+TRM_FE_social_democrat_DEF:0 "the Far Eastern Republic"
+TRM_FE_social_liberal:0 "Far Eastern Republic"
+TRM_FE_social_liberal_ADJ:0 "Far Eastern"
+TRM_FE_social_liberal_DEF:0 "the Far Eastern Republic"
+TRM_FE_market_liberal:0 "Far Eastern Republic"
+TRM_FE_market_liberal_ADJ:0 "Far Eastern"
+TRM_FE_market_liberal_DEF:0 "the Far Eastern Republic"
+TRM_FE_social_conservative:0 "Far Eastern Republic"
+TRM_FE_social_conservative_ADJ:0 "Far Eastern"
+TRM_FE_social_conservative_DEF:0 "the Far Eastern Republic"
+TRM_FE_authoritarian_democrat:0 "Russian Far Eastern Republic"
+TRM_FE_authoritarian_democrat_ADJ:0 "Far Eastern"
+TRM_FE_authoritarian_democrat_DEF:0 "the Russian Far Eastern Republic"
+TRM_FE_paternal_autocrat:0 "Russian Far Eastern Republic"
+TRM_FE_paternal_autocrat_ADJ:0 "Far Eastern"
+TRM_FE_paternal_autocrat_DEF:0 "the Russian Far Eastern Republic"
+TRM_FE_national_populist:0 "Russian Far Eastern Republic"
+TRM_FE_national_populist_ADJ:0 "Far Eastern"
+TRM_FE_national_populist_DEF:0 "the Russian Far Eastern Republic"
+
+TRM_RUS_totalist:0 "Russian Union"
+TRM_RUS_totalist_ADJ:0 "Russian"
+TRM_RUS_totalist_DEF:0 "the Russian Union"
+TRM_RUS_radical_socialist:0 "Russian Socialist Republic"
+TRM_RUS_radical_socialist_ADJ:0 "Russian"
+TRM_RUS_radical_socialist_DEF:0 "the Russian Socialist Republic"
+TRM_RUS_syndicalist:0 "Commune of Russia"
+TRM_RUS_syndicalist_ADJ:0 "Russian"
+TRM_RUS_syndicalist_DEF:0 "the Commune of Russia"
+TRM_RUS_social_democrat:0 "Russian Republic"
+TRM_RUS_social_democrat_ADJ:0 "Russian"
+TRM_RUS_social_democrat_DEF:0 "the Russian Republic"
+TRM_RUS_social_liberal:0 "Russian Republic"
+TRM_RUS_social_liberal_ADJ:0 "Russian"
+TRM_RUS_social_liberal_DEF:0 "the Russian Republic"
+TRM_RUS_market_liberal:0 "Russian Republic"
+TRM_RUS_market_liberal_ADJ:0 "Russian"
+TRM_RUS_market_liberal_DEF:0 "the Russian Republic"
+TRM_RUS_social_conservative:0 "Russian Republic"
+TRM_RUS_social_conservative_ADJ:0 "Russian"
+TRM_RUS_social_conservative_DEF:0 "the Russian Republic"
+TRM_RUS_authoritarian_democrat:0 "Russian Republic"
+TRM_RUS_authoritarian_democrat_ADJ:0 "Russian"
+TRM_RUS_authoritarian_democrat_DEF:0 "the Russian Republic"
+TRM_RUS_paternal_autocrat:0 "Russian Republic"
+TRM_RUS_paternal_autocrat_ADJ:0 "Russian"
+TRM_RUS_paternal_autocrat_DEF:0 "the Russian Republic"
+TRM_RUS_national_populist:0 "Russian Republic"
+TRM_RUS_national_populist_ADJ:0 "Russian"
+TRM_RUS_national_populist_DEF:0 "the Russian Republic"
 
 LYB_ITA_subject:0 "Italian North Africa"
 LYB_ITA_subject_DEF:0 "Italian North Africa"
