fixes locale for Pre-WW submarines

--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
 ### General ###
-U-boat_pre:0 "Pre-Weltkrieg U-boat"
-U-boat_pre_desc:0 "The first U-boats opened a new horizon for naval warfare. These new vessels can break through enemy waters without being detected and wreak havoc on the convoy routes."
+submarine_pre:0 "Pre-Weltkrieg U-boat"
+submarine_pre_desc:0 "The first U-boats opened a new horizon for naval warfare. These new vessels can break through enemy waters without being detected and wreak havoc on the convoy routes."
 destroyer_pre:0 "Pre-Weltkrieg Destroyer"
 destroyer_pre_desc:0 "Before the Weltkrieg these destroyers were used to protect capital ships from torpedo boats. Some of them were equipped with torpedoes themselves."
 light_cruiser_pre:0 "Pre-Weltkrieg Light Cruiser"
