--- a/localisation/KR_Colombia_l_english.yml
+++ b/localisation/KR_Colombia_l_english.yml
@@ -3,8 +3,8 @@
 ### Ideas ###
 COL_coffee:0 "Coffee Boom"
 COL_coffee_desc:0 "Our farms are producing quality coffee at an increased rate"
-COL_coffe_trade:0 "Coffee Exports
-COL_coffe_trade_desc:0 "Coffee is now our prime export commodity, and the turmoil in Brazil resulted in a de facto monopoly which is ours to enjoy"
+COL_coffee_trade:0 "Coffee Exports
+COL_coffee_trade_desc:0 "Coffee is now our prime export commodity, and the turmoil in Brazil resulted in a de facto monopoly which is ours to enjoy"
 COL_bogotazo:0 "Political Violence"
 COL_bogotazo_desc:0 "Violence between Liberals, Conservatives, Syndicalists and Leopardos erupted in a swift yet brutal manner in Bogotá. Now our party has nearly absolute control of Colombian politics"
 COL_status_quo: "Status Quo upheld"
