More Turkestan events... Soon the caliphate will rule all of Asia

--- a/localisation/KR_Turkestan_l_english.yml
+++ b/localisation/KR_Turkestan_l_english.yml
@@ -18,11 +18,27 @@ turkestan.3.b:0 "The time is not yet right."
 
 turkestan.4.t:0 "War in Central Asia!"
 turkestan.4.d:0 "Our two giant neighbours, Turkestan and Alash Orda, are at war.  If Turkestan wins, they could turn on Persia next.  Should we send aid across the Caspian Sea to the Kazakhs?"
-turkestan.4.a:0 "We must move into Kazakhstan!"
+turkestan.4.a:0 "Send aid!"
 turkestan.4.b:0 "Send aid, and intervene against Turkestan"
 turkestan.4.c:0 "Do nothing."
 
 turkestan.5.t:0 "Aid from Persia"
 turkestan.5.d.supplies:0 "The Persians send aid to help against the onslaught of the Turkmen."
-turkestan.5.d.war:0 "The Persians send aid to help against the onslaught of the Turkmen, and not only that, but joined the war effort against the barbarians. With the Persian's help, we will finally put an end to Turkic menace."
+turkestan.5.d.war:0 "The Persians send aid to help against the onslaught of the Turkmen, and not only that, but joined the war effort against the barbarians. With the Persian's help, we will finally put an end to the Turkic menace."
 turkestan.5.a:0 "Great!"
+
+turkestan.6.t:0 "War in Central Asia!"
+turkestan.6.d:0 "Our two giant neighbours, Turkestan and Alash Orda, are at war.  If Turkestan wins, they could turn on Afghanistan next.  But we could only help the Kazakhs by declaring war on Turkestan ourselves - a very risky proposition!"
+turkestan.6.a:0 "It is time to fight!"
+turkestan.6.b:0 "Do nothing."
+
+turkestan.7.t:0 "War in Central Asia!"
+turkestan.7.d:0 "Our two giant neighbours, Turkestan and the Kazakh Republic, are at war.  If Turkestan wins, they could turn on us next.  We have always been friends with the Kazakhs - should we help them?"
+turkestan.7.a:0 "Send aid!"
+turkestan.7.b:0 "Send aid, and intervene against Turkestan"
+turkestan.7.c:0 "Do nothing."
+
+turkestan.8.t:0 "Aid from Xibei San Ma"
+turkestan.8.d.supplies:0 "The Western Warlords have sent aid!"
+turkestan.8.d.war:0 "The Western Warlords have sent aid, and not only that, but joined the war effort against the barbarians. With the Xibei San Ma's help, we will finally put an end to the Turkic menace."
+turkestan.8.a:0 "Great!"
