A few spelling and readability fixes

--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -470,7 +470,7 @@ BAT_Air_CAS_desc:0 "A modern army needs support from vehicles not only on the gr
 BAT_Air_Fighter:0 "Fighter effort"
 BAT_Air_Fighter_desc:0 "We have not seen that last of dogfights in the Weltkrieg. Keeping ahead in the development of fighter planes will give us an edge in the future."
 BAT_Air_Nav_Bomber:0 "Naval Bomber effort"
-BAT_Air_Nav_Bomber_desc:0 "Ships have proven exceptionally vulnerable to aircrafts. We should keep improving on their technology to ensure we stay ahead of any countermeasures."
+BAT_Air_Nav_Bomber_desc:0 "Ships have proven exceptionally vulnerable to aircraft. We should keep improving on their technology to ensure we stay ahead of any countermeasures."
 BAT_Air_Doc:0 "Air Innovations"
 BAT_Air_Doc_desc:0 "Modern wars cannot be won without dominating the skies. We must do everything in our power to develop the air force!"
 BAT_Air_End:0 "Baltic Aviation"
@@ -493,7 +493,6 @@ BAT_scientists:0 "New Scientists"
 BAT_pol:0 "Political Establishment"
 BAT_drill:0 "Modern Training System"
 BAT_fort:0 "Ostwall Fortifications Network"
-
 
 ### Flags ###
 BAT_politic:0 "Political Path"
