--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -319,7 +319,7 @@ tram.81.a:0 "Sergei Wojciechowski is the new leader of Transamur!"
 tram.81.b:0 "A Republic is founded"
 
 tram.84.t:0 "Admiral Kolchak was overthrown!"
-tram.84.d:0 "Admiral Kolchak, the long term leader of the Transamur state has been overthrown and assasinated by members of his own general staff. This was used by the democratic opposition to gain control over the state, effectively turning Transamur from a military junta into a democracy. How shall we react?"
+tram.84.d:0 "Admiral Kolchak, the long term leader of the Transamur state has been overthrown and assassinated by members of his own general staff. This was used by the democratic opposition to gain control over the state, effectively turning Transamur from a military junta into a democracy. How shall we react?"
 tram.84.a:0 "Demand the restoration of a military cabinet!"
 tram.84.b:0 "Congratulate the new government!"
 
@@ -375,7 +375,6 @@ TRM_social_conservative:0 "Transamur Republic"
 TRM_authoritarian_democrat:0 "Transamur"
 TRM_paternal_autocrat:0 "Transamur"
 TRM_national_populist:0 "Transamur"
-
 
 ### Ideas ###
 TRM_kolchak:0 "Admiral-Dictator"
