--- a/localisation/KR_Mittelafrika_l_english.yml
+++ b/localisation/KR_Mittelafrika_l_english.yml
@@ -27,6 +27,7 @@ MAF_Improved_Education:0 "Improved Education"
 MAF_Colonial_Nation:0 "Colonial Nation"
 MAF_POR_Payment_For_Colonies:0 "African Colonial Payment"
 MAF_Payment_For_Colonies:0 "African Colonial Payment"
+
 ### Parties ###
 MAF_authoritarian_democrat_party:0 "Schutzgebietsverwaltung"
 MAF_paternal_autocrat_party:0 "Schutzgebietsverwaltung"
@@ -61,13 +62,13 @@ mittel.4.d:0 "The Reichstag's audit of Mittelafrika has expanded into a general 
 mittel.4.a:0 "Remove him from his office !"
 mittel.4.b:0 "Germany values its heroes ! "
 mittel.5.t:0 "New statthalter for Mittelafrika"
-mittel.5.d:0 "As we got rid of Hermann Goering, after a comission of the Imperial Government found out about his embezzlement schemes, the German Colonial Ministry must now select a new Statthalter (Governor-General) for Mittelafrika. But who will be his replacement? Both Ernst Junger, the conservative Prussian writer and Chief of Staff of the Mittelafrikan Army, and Theodor von Hippel, head of the Mittelafrikan branch of the Abwehr, are the main candidates amongst the Colonial administration. But a reformist faction, seeking to improve relations with the local African elites, is pushing either for Karl Atangana, the loyal paramount chief of the Ewondo people of Niger-Kamerun or for Achirimbi II, the tenth king of Bafut in Kamerun."
+mittel.5.d:0 "As we got rid of Hermann Goering, after a commission of the Imperial Government found out about his embezzlement schemes, the German Colonial Ministry must now select a new Statthalter (Governor-General) for Mittelafrika. But who will be his replacement? Both Ernst Junger, the conservative Prussian writer and Chief of Staff of the Mittelafrikan Army, and Theodor von Hippel, head of the Mittelafrikan branch of the Abwehr, are the main candidates amongst the Colonial administration. But a reformist faction, seeking to improve relations with the local African elites, is pushing either for Karl Atangana, the loyal paramount chief of the Ewondo people of Niger-Kamerun or for Achirimbi II, the tenth king of Bafut in Kamerun."
 mittel.5.a:0 "Ernst Junger, the famous writer!"
 mittel.5.b:0 "Theodor von Hippel, the war hero!"
 mittel.5.c:0 "Karl Atangana, the paramount chief!"
 mittel.5.e:0 "Achirimbi II, the king of Bafut!"
 mittel.6.t:0 "The Fate of the Portuguese Colonies"
-mittel.6.d:0 "Ever since the end of the Weltkrieg, officials both in Berlin and in Dar Es Salaam have had their designs about expansion for the Freistaat Mittelafrika. Most of those plans involved the annexation of the Portuguese colonies in Africa, most notably Angola and Mozambique - true geopolitical anomalies, foreign enclaves within a mighty and huge German colonial holding. Only the Peace with Honour accords, which preserved the colonial empires of the Entente powers after the Great War, has prevented the annexation of these territories. During the 1920s and the early 1930s, Berlin officially abandoned these expansion plans and instead started to rebuild good relations with Portugal. The recent discovery of new major oilfields off the coast of Angola, however, has changed the whole situation. With Germany currently depending on oil supplies from Romania, Persia and Azerbaijan, having a steady source of petroleum within our colonial empire would be a true bliss for the German economy. Now, the question of Portuguese colonies has come up again in the governnment. Should we try to convince Berlin usefulnes of territorial expansion of Mittelafrika, especially now with discovery of oil deposits in Angola?"
+mittel.6.d:0 "Ever since the end of the Weltkrieg, officials both in Berlin and in Dar Es Salaam have had their designs about expansion for the Freistaat Mittelafrika. Most of those plans involved the annexation of the Portuguese colonies in Africa, most notably Angola and Mozambique - true geopolitical anomalies, foreign enclaves within a mighty and huge German colonial holding. Only the Peace with Honour accords, which preserved the colonial empires of the Entente powers after the Great War, has prevented the annexation of these territories. During the 1920s and the early 1930s, Berlin officially abandoned these expansion plans and instead started to rebuild good relations with Portugal. The recent discovery of new major oilfields off the coast of Angola, however, has changed the whole situation. With Germany currently depending on oil supplies from Romania, Persia and Azerbaijan, having a steady source of petroleum within our colonial empire would be a true bliss for the German economy. Now, the question of Portuguese colonies has come up again in the government. Should we try to convince Berlin usefulness of territorial expansion of Mittelafrika, especially now with discovery of oil deposits in Angola?"
 mittel.6.a:0 "Run this by Germany first"
 mittel.7.t:0 "The Portuguese Colonies in Afrika"
 mittel.7.d:0 "Ever since the end of the Weltkrieg, officials both in Berlin and in Dar Es Salaam have had their designs about expansion for the Freistaat Mittelafrika. Most of those plans involved the annexation of the Portuguese colonies in Africa, most notably Angola and Mozambique - true geopolitical anomalies, foreign enclaves within a mighty and huge German colonial holding. Only the Peace with Honour accords, which preserved the colonial empires of the Entente powers after the Great War, has prevented the annexation of these territories. During the 1920s and the early 1930s, Berlin officially abandoned these expansion plans and instead started to rebuild good relations with Portugal. The recent discovery of new major oilfields off the coast of Angola, however, has changed the whole situation. With Germany currently depending on oil supplies from Romania, Persia and Azerbaijan, having a steady source of petroleum within our colonial empire would be a true bliss for the German economy. The Staathalter of Mittelafrika, has brought this matter to our attention and seeks our response. Trying to pursue this expansionist agenda, however, would ruin our relations with Portugal, which is one of the few stable anti-Syndicalist countries in Europe and could be a true ally in the coming war against the Internationale."
@@ -101,6 +102,7 @@ mittel.15.t:0 "The End of the Colonial War"
 mittel.15.d:0 "We have been beaten by the Germans in Africa, and we wouldn't want to bring the fight home so it would be best if we surrendered our colonies in exchange for peace."
 mittel.15.a:0 "Give up the colonies in exchange for peace"
 mittel.15.b:0 "Never! Angola e Nossa!"
+
 ### Foci ###
 MAF_African_Resources:0 "African Resources"
 MAF_Oil_In_Nigeria:0 "Oil In Nigeria"
@@ -131,7 +133,7 @@ MAF_Study_Other_Colonial_Armies:0 "Study Other Colonial Armies"
 MAF_Annual_Financial_Statement:0 "Annual Financial Statement"
 MAF_Germany_Honours_Heroes:0 "Deutschland Ehrt Seine Helden"
 MAF_Secret_Police:0 "Establish the Deutsche Geheimpolizei"
-MAF_Supress_Natives:0 "Supress Native Revolts"
+MAF_Supress_Natives:0 "Suppress Native Revolts"
 MAF_Forced_Labour:0 "Arbeit Macht Frei"
 MAF_Ban_European_Languages:0 "Ban European Languages"
 MAF_Goering:0 "Herrschaft Görings"
