standardises country tags for Slovenia and Slovakia to ISO standard, to no longer confuse me to hell

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -3739,36 +3739,36 @@ SIK_totalist:0 "Uyghuristan"
 SIK_totalist_ADJ:0 "Uyghuristan"
 SIK_totalist_DEF:0 "Uyghuristan"
 
-SLO_authoritarian_democrat:0 "Kingdom of Slovakia"
-SLO_authoritarian_democrat_ADJ:0 "Slovakian"
-SLO_authoritarian_democrat_DEF:0 "The Kingdom of Slovakia"
-SLO_market_liberal:0 "Nationalist Slovakia"
-SLO_market_liberal_ADJ:0 "Slovakian"
-SLO_market_liberal_DEF:0 "Nationalist Slovakia"
-SLO_national_populist:0 "Kingdom of Slovakia"
-SLO_national_populist_ADJ:0 "Slovakian"
-SLO_national_populist_DEF:0 "The Kingdom of Slovakia"
-SLO_paternal_autocrat:0 "Kingdom of Slovakia"
-SLO_paternal_autocrat_ADJ:0 "Slovakian"
-SLO_paternal_autocrat_DEF:0 "The Kingdom of Slovakia"
-SLO_radical_socialist:0 "Slovak Socialist Republic"
-SLO_radical_socialist_ADJ:0 "Slovakian"
-SLO_radical_socialist_DEF:0 "The Slovak Socialist Republic"
-SLO_social_conservative:0 "Slovakia"
-SLO_social_conservative_ADJ:0 "Slovakian"
-SLO_social_conservative_DEF:0 "Slovakia"
-SLO_social_democrat:0 "Slovakia"
-SLO_social_democrat_ADJ:0 "Slovakian"
-SLO_social_democrat_DEF:0 "Slovakia"
-SLO_social_liberal:0 "Nationalist Slovakia"
-SLO_social_liberal_ADJ:0 "Slovakian"
-SLO_social_liberal_DEF:0 "Nationalist Slovakia"
-SLO_syndicalist:0 "Slovak Socialist Republic"
-SLO_syndicalist_ADJ:0 "Slovakian"
-SLO_syndicalist_DEF:0 "The Slovak Socialist Republic"
-SLO_totalist:0 "Slovak Socialist Republic"
-SLO_totalist_ADJ:0 "Slovakian"
-SLO_totalist_DEF:0 "The Slovak Socialist Republic"
+SVK_authoritarian_democrat:0 "Kingdom of Slovakia"
+SVK_authoritarian_democrat_ADJ:0 "Slovakian"
+SVK_authoritarian_democrat_DEF:0 "The Kingdom of Slovakia"
+SVK_market_liberal:0 "Nationalist Slovakia"
+SVK_market_liberal_ADJ:0 "Slovakian"
+SVK_market_liberal_DEF:0 "Nationalist Slovakia"
+SVK_national_populist:0 "Kingdom of Slovakia"
+SVK_national_populist_ADJ:0 "Slovakian"
+SVK_national_populist_DEF:0 "The Kingdom of Slovakia"
+SVK_paternal_autocrat:0 "Kingdom of Slovakia"
+SVK_paternal_autocrat_ADJ:0 "Slovakian"
+SVK_paternal_autocrat_DEF:0 "The Kingdom of Slovakia"
+SVK_radical_socialist:0 "Slovak Socialist Republic"
+SVK_radical_socialist_ADJ:0 "Slovakian"
+SVK_radical_socialist_DEF:0 "The Slovak Socialist Republic"
+SVK_social_conservative:0 "Slovakia"
+SVK_social_conservative_ADJ:0 "Slovakian"
+SVK_social_conservative_DEF:0 "Slovakia"
+SVK_social_democrat:0 "Slovakia"
+SVK_social_democrat_ADJ:0 "Slovakian"
+SVK_social_democrat_DEF:0 "Slovakia"
+SVK_social_liberal:0 "Nationalist Slovakia"
+SVK_social_liberal_ADJ:0 "Slovakian"
+SVK_social_liberal_DEF:0 "Nationalist Slovakia"
+SVK_syndicalist:0 "Slovak Socialist Republic"
+SVK_syndicalist_ADJ:0 "Slovakian"
+SVK_syndicalist_DEF:0 "The Slovak Socialist Republic"
+SVK_totalist:0 "Slovak Socialist Republic"
+SVK_totalist_ADJ:0 "Slovakian"
+SVK_totalist_DEF:0 "The Slovak Socialist Republic"
 
 RUS_authoritarian_democrat:0 "Russian Republic"
 RUS_authoritarian_democrat_ADJ:0 "Russian"
@@ -6253,36 +6253,36 @@ KUR_totalist:0 "Kurdistan"
 KUR_totalist_ADJ:0 "Kurdish"
 KUR_totalist_DEF:0 "Kurdistan"
 
-SLV_authoritarian_democrat:0 "Kingdom of Slovenia"
-SLV_authoritarian_democrat_ADJ:0 "Slovene"
-SLV_authoritarian_democrat_DEF:0 "The Kingdom of Slovenia"
-SLV_paternal_autocrat:0 "Kingdom of Slovenia"
-SLV_paternal_autocrat_ADJ:0 "Slovene"
-SLV_paternal_autocrat_DEF:0 "The Kingdom of Slovenia"
-SLV_national_populist:0 "Kingdom of Slovenia"
-SLV_national_populist_ADJ:0 "Slovene"
-SLV_national_populist_DEF:0 "The Kingdom of Slovenia"
-SLV_social_conservative:0 "Slovenia"
-SLV_social_conservative_ADJ:0 "Slovene"
-SLV_social_conservative_DEF:0 "Slovenia"
-SLV_social_liberal:0 "Slovenia"
-SLV_social_liberal_ADJ:0 "Slovene"
-SLV_social_liberal_DEF:0 "Slovenia"
-SLV_market_liberal:0 "Slovenia"
-SLV_market_liberal_ADJ:0 "Slovene"
-SLV_market_liberal_DEF:0 "Slovenia"
-SLV_social_democrat:0 "Slovenia"
-SLV_social_democrat_ADJ:0 "Slovene"
-SLV_social_democrat_DEF:0 "Slovenia"
-SLV_radical_socialist:0 "Socialist Republic of Slovenia"
-SLV_radical_socialist_ADJ:0 "Slovene"
-SLV_radical_socialist_DEF:0 "The Socialist Republic of Slovenia"
-SLV_syndicalist:0 "Socialist Republic of Slovenia"
-SLV_syndicalist_ADJ:0 "Slovene"
-SLV_syndicalist_DEF:0 "The Socialist Republic of Slovenia"
-SLV_totalist:0 "Socialist Republic of Slovenia"
-SLV_totalist_ADJ:0 "Slovene"
-SLV_totalist_DEF:0 "The Socialist Republic of Slovenia"
+SLO_authoritarian_democrat:0 "Kingdom of Slovenia"
+SLO_authoritarian_democrat_ADJ:0 "Slovene"
+SLO_authoritarian_democrat_DEF:0 "The Kingdom of Slovenia"
+SLO_paternal_autocrat:0 "Kingdom of Slovenia"
+SLO_paternal_autocrat_ADJ:0 "Slovene"
+SLO_paternal_autocrat_DEF:0 "The Kingdom of Slovenia"
+SLO_national_populist:0 "Kingdom of Slovenia"
+SLO_national_populist_ADJ:0 "Slovene"
+SLO_national_populist_DEF:0 "The Kingdom of Slovenia"
+SLO_social_conservative:0 "Slovenia"
+SLO_social_conservative_ADJ:0 "Slovene"
+SLO_social_conservative_DEF:0 "Slovenia"
+SLO_social_liberal:0 "Slovenia"
+SLO_social_liberal_ADJ:0 "Slovene"
+SLO_social_liberal_DEF:0 "Slovenia"
+SLO_market_liberal:0 "Slovenia"
+SLO_market_liberal_ADJ:0 "Slovene"
+SLO_market_liberal_DEF:0 "Slovenia"
+SLO_social_democrat:0 "Slovenia"
+SLO_social_democrat_ADJ:0 "Slovene"
+SLO_social_democrat_DEF:0 "Slovenia"
+SLO_radical_socialist:0 "Socialist Republic of Slovenia"
+SLO_radical_socialist_ADJ:0 "Slovene"
+SLO_radical_socialist_DEF:0 "The Socialist Republic of Slovenia"
+SLO_syndicalist:0 "Socialist Republic of Slovenia"
+SLO_syndicalist_ADJ:0 "Slovene"
+SLO_syndicalist_DEF:0 "The Socialist Republic of Slovenia"
+SLO_totalist:0 "Socialist Republic of Slovenia"
+SLO_totalist_ADJ:0 "Slovene"
+SLO_totalist_DEF:0 "The Socialist Republic of Slovenia"
 
 CYP_authoritarian_democrat:0 "Cyprus"
 CYP_authoritarian_democrat_ADJ:0 "Cypriot"
