--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -1655,28 +1655,28 @@ BHU_tsarong_rinpoche:0 "Tsarong Rinpoche"
 BHU_generic_fascist_demagogue:0 "Ram Tshering"
 BHU_generic_democratic_reformer:0 "Langa Yeshey"
 BHU_generic_communist_revolutionary:0 "Hemal Ngawang"
-SLO_generic_fascist_demagogue:0 "Tido Gaspar"
-SLO_generic_democratic_reformer:0 "Daniel Ertl"
-SLO_generic_communist_revolutionary:0 "Gustaf Husak"
-SLO_frano_kral:0 "Frano Kral"
-SLO_janko_jesensky:0 "Janko Jesensky"
-SLO_stefan_tiso:0 "Stefan Tiso"
-SLO_jaroslav_kratochvil:0 "Jaroslav Kratochvil"
-SLO_karol_sidor:0 "Karol Sidor"
-SLO_emil_lendvay:0 "Emil Lendvay"
-SLO_vojtech_daubner:0 "Vojtech Daubner"
-SLO_jozef_hora:0 "Jozef Hora"
-SLO_jozef_snejdarek:0 "Jozef Snejdarek"
-SLO_frantisek_sadek:0 "Frantisek Sadek"
-SLO_fritz_gejza:0 "Fritz Gejza"
-SLO_cyril_kuchta:0 "Cyril Kuchta"
-SLO_ferdinand_catlos:0 "Ferdinand Catlos"
-SLO_gustav_malar:0 "Gustav Malar"
-SLO_rudolf_viest:0 "Rudolf Viest"
-SLO_anton_pulanick:0 "Anton Pulanick"
-SLO_frantisek_straka:0 "Frantisek Straka"
-SLO_jindrich_honzl:0 "Jindrich Honzl"
-SLO_jozef_turanec:0 "Jozef Turanec"
+SVK_generic_fascist_demagogue:0 "Tido Gaspar"
+SVK_generic_democratic_reformer:0 "Daniel Ertl"
+SVK_generic_communist_revolutionary:0 "Gustaf Husak"
+SVK_frano_kral:0 "Frano Kral"
+SVK_janko_jesensky:0 "Janko Jesensky"
+SVK_stefan_tiso:0 "Stefan Tiso"
+SVK_jaroslav_kratochvil:0 "Jaroslav Kratochvil"
+SVK_karol_sidor:0 "Karol Sidor"
+SVK_emil_lendvay:0 "Emil Lendvay"
+SVK_vojtech_daubner:0 "Vojtech Daubner"
+SVK_jozef_hora:0 "Jozef Hora"
+SVK_jozef_snejdarek:0 "Jozef Snejdarek"
+SVK_frantisek_sadek:0 "Frantisek Sadek"
+SVK_fritz_gejza:0 "Fritz Gejza"
+SVK_cyril_kuchta:0 "Cyril Kuchta"
+SVK_ferdinand_catlos:0 "Ferdinand Catlos"
+SVK_gustav_malar:0 "Gustav Malar"
+SVK_rudolf_viest:0 "Rudolf Viest"
+SVK_anton_pulanick:0 "Anton Pulanick"
+SVK_frantisek_straka:0 "Frantisek Straka"
+SVK_jindrich_honzl:0 "Jindrich Honzl"
+SVK_jozef_turanec:0 "Jozef Turanec"
 COS_generic_fascist_demagogue:0 "Calufa Fallas Sinaja"
 COS_generic_democratic_reformer:0 "Miguel Ramirez Alcantara"
 COS_generic_communist_revolutionary:0 "Gustaf Husak"
