More Chilly changes

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -1138,9 +1138,9 @@ CHL_national_populist_DEF:0 "Nationalist Chile"
 CHL_paternal_autocrat:0 "Chile"
 CHL_paternal_autocrat_ADJ:0 "Chilean"
 CHL_paternal_autocrat_DEF:0 "Chile"
-CHL_radical_socialist:0 "Chilean Socialist Republic"
+CHL_radical_socialist:0 "Chile"
 CHL_radical_socialist_ADJ:0 "Chilean"
-CHL_radical_socialist_DEF:0 "The Chilean Socialist Republic"
+CHL_radical_socialist_DEF:0 "Chile"
 CHL_social_conservative:0 "Chile"
 CHL_social_conservative_ADJ:0 "Chilean"
 CHL_social_conservative_DEF:0 "Chile"
@@ -1150,12 +1150,12 @@ CHL_social_democrat_DEF:0 "Chile"
 CHL_social_liberal:0 "Chile"
 CHL_social_liberal_ADJ:0 "Chilean"
 CHL_social_liberal_DEF:0 "Chile"
-CHL_syndicalist:0 "Chilean Syndical Republic"
+CHL_syndicalist:0 "Syndicalist Republic of Chile"
 CHL_syndicalist_ADJ:0 "Chilean"
-CHL_syndicalist_DEF:0 "The Chilean Syndical Republic"
+CHL_syndicalist_DEF:0 "Syndicalist Republic of Chile"
 CHL_totalist:0 "Chilean Socialist Republic"
 CHL_totalist_ADJ:0 "Chilean"
-CHL_totalist_DEF:0 "The Chilean Socialist Republic"
+CHL_totalist_DEF:0 "Chilean Socialist Republic"
 
 COL_authoritarian_democrat:0 "Colombia"
 COL_authoritarian_democrat_ADJ:0 "Colombian"
