Some more work on Hawaii

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -151,22 +151,30 @@ HAW_syndicalist_party:0 "PWU"
 HAW_syndicalist_party_long:0 "Pineapple Workers Union"
 HAW_radical_socialist_party:0 "CSH"
 HAW_radical_socialist_party_long:0 "Combined Syndicates of Hawai'i"
-HAW_social_democrat_party:0 "SPW"
-HAW_social_democrat_party_long:0 "Socialist Party of Hawai'i"
-HAW_social_liberal_party:0 "Hawaii Democrats"
-HAW_social_liberal_party_long:0 "Democratic Party of Hawai'i"
-HAW_market_liberal_party:0 "Hawai'i Republicans"
-HAW_market_liberal_party_long:0 "Hawai'i Republican Party"
-HAW_social_conservative_party:0 "Monarchists"
-HAW_social_conservative_party_long:0 "Monarchist Party"
+HAW_social_democrat_party:0 "Progressive Party"
+HAW_social_democrat_party_long:0 "Progressive Party of Hawai'i"
+HAW_social_liberal_party:0 "National Liberal Party"
+HAW_social_liberal_party_long:0 "Hawai'ian National Liberal Party"
+HAW_market_liberal_party:0 "Reform Party"
+HAW_market_liberal_party_long:0 "Reform Party of Hawai'i"
+HAW_social_conservative_party:0 "National Party"
+HAW_social_conservative_party_long:0 "Hawai'ian National Party"
 HAW_authoritarian_democrat_party:0 "Military Junta"
 HAW_authoritarian_democrat_party_long:0 "Military Junta"
 HAW_paternal_autocrat_party:0 "HFP"
 HAW_paternal_autocrat_party_long:0 "Hawai'i First Party"
 HAW_national_populist_party:0 "HFP"
 HAW_national_populist_party_long:0 "Hawai'i First Party"
-
 ### Ideas ###
+HAW_people_victory:0 "Revolutionary Hawai'i"
+HAW_socialist_educations:0 "Socialist Education"
+HAW_native_education:0 "Punana Leo"
+HAW_hawaii_renassiance:0 "Hawai'ian Renassiance"
+HAW_big_five_support:0 "Big Five Support"
+HAW_republic_education:0 "Republican Education"
+HAW_multi_cultural_hawaii:0 "Multicultural Hawai'i"
+HAW_syndicalist_democracy:0 "Syndicalist Democracy"
+
 
 ### Cosmetic Tags ###
 HAW_kingdom_social_democrat:0 "Kingdom of Hawai'i"
@@ -292,13 +300,17 @@ hawaii.30.a:0 "Long Live Hawai'i"
 hawaii.31.t:0 "The Hawai'ian Revolution!"
 hawaii.31.d:0 "While the rich plantation owners, industrialists, nobility all gathered in Honolulu to discuss the future of Hawai'i they paid little heed to the poor toiling away on the plantations or in the factories. Following the lead of the CSA in America, a number of labour organises like Jack Hall have gone to the various plantations and factories and have lead an insurrection against the ruling elites. Fleeing from Honolulu as fast as they can, a new government was set up in the capital, a government truly for the people."
 hawaii.31.a:0 "Break the Chains!"
-hawaii.32.t:0 ""
-hawaii.32.d:0 ""
-hawaii.32.a:0 ""
-hawaii.33.t:0 ""
-hawaii.33.d:0 ""
-hawaii.33.a:0 ""
-hawaii.34.t:0 ""
-hawaii.34.d:0 ""
-hawaii.34.a:0 ""
+hawaii.32.t:0 "Election of the Kuhina Nui"
+hawaii.32.d:0 "With the restoration of the kingdom of Hawai'i, it is time for an election of the Kuhina Nui or Prime minster. The Kuhina Nui is the head of government and will be directly elected by the people. Several parties are running for the first time, the Progressive Party, The National Liberal Party, The Reform Party and the National Party. "
+hawaii.32.a:0 "The National Party Wins!"
+hawaii.32.b:0 "The Reform Party Wins!"
+hawaii.32.c:0 "The National Liberal Party Wins!"
+hawaii.32.e:0 "The Progressive Party Wins!"
+hawaii.33.t:0 "Election of President"
+hawaii.33.d:0 "Now with the constitution of the Republic of Hawai'i has been written, the first elections for the president of Hawai'i. The President of Hawai'i will be directly elected by the people of Hawai'i on universal suffrage for all men and women. Several parties are running for the first time, the Progressive Party, The National Liberal Party, The Reform Party and the National Party."
+hawaii.33.a:0 "The National Party Wins!"
+hawaii.33.b:0 "The Reform Party Wins!"
+hawaii.33.c:0 "The National Liberal Party Wins!"
+hawaii.33.e:0 "The Progressive Party Wins!"
+
 
