Fengtian Mantetsu Schooling events.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -474,6 +474,23 @@ fengtian.new.7.a:0 "What a disaster!"
 fengtian.new.8.t:0 "Land Reform Underway"
 fengtian.new.8.d:0 "For better or worse, land reform is now underway at both the local and national levels, with officials superseding the local Xiangshen to assert the central government's sovereignty for the first time in hundreds of years. However, while they have used that time to thoroughly game the machine of local administration, they were also its designers and engineers, forcing officials to proverbially re-invent the wheel. While many are satisfied, the economy is certain to suffer considerably, and it is unclear just how far the reforms will be able to go."
 fengtian.new.8.a:0 "This is the price of progress"
+##The Fate of Mantetsu Schooling##
+fengtian.new.9.t:0 "The Fate of Mantetu Schooling"
+fengtian.new.9.d:0 "INSERT"
+fengtian.new.9.a:0 "Close the schools"
+fengtian.new.9.b:0 "There is no choice"
+fengtian.new.10.t:0 "The Kimono Scandal"
+fengtian.new.10.d:0 "INSERT"
+fengtian.new.10.a:0 "What an embarassment!"
+fengtian.new.10.b:0 "Close the schools!"
+fengtian.new.11.t:0 "Students Join the Youth League"
+fengtian.new.11.d:0 "INSERT"
+fengtian.new.11.a:0 "This is an outrage!"
+fengtian.new.11.b:0 "Close the schools!"
+fengtian.new.12.t:0 "Chinese Uniforms for Chinese Students"
+fengtian.new.12.d:0 "INSERT"
+fengtian.new.12.a:0 "A point of pride!" 
+
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
