Some more naval localisation fixes

--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -67,8 +67,8 @@ RUS_heavy_cruiser_3_desc:0 "The Alexandr Nevskyi-class heavy cruisers were desig
 RUS_heavy_cruiser_4:0 "Dmytryi Donskoi Class"
 RUS_heavy_cruiser_4_desc:0 "The Dmytryi Donskoy-class heavy cruisers are the development of the previous Alexandr Nevskyi class. Design studies started in 1943 and the final version emerged in 1945. The vessels feature 220mm cannons in 3 triple turrets and a strong AA armament. Displacement is at least 26,500 tons."
 
-RUS_battle_cruiser_1:0 "Borodino Class"
-RUS_battle_cruiser_1_desc:0 "The Borodino-class battlecruisers were class of four vessels authorised in 1914, just before Second Patriotic war. They were based on the Imperatritsa Mariya class battleships. They followed the contemporary Russian capital ship building practices of using four triple turrets to house the heavy main armament, strong secondary armament in casemates, and an overall flush-deck. They had a low profile with low draught to fight in the shallow waters of the Baltic Sea. Like many Russian ships of this period, the outbreak of Second Patriotic war and the Russian Revolution delayed these ships from being finished in time."
+RUS_battle_cruiser_1:0 "Ismail Class"
+RUS_battle_cruiser_1_desc:0 "The Ismail-class battlecruisers were class of four vessels authorised in 1914, just before Second Patriotic war. Their design was based on the Imperatritsa Mariya class battleships. They followed the contemporary Russian capital ship building practices of using four triple turrets to house the heavy main armament, strong secondary armament in casemates, and an overall flush-deck. They had a low profile with low draught to fight in the shallow waters of the Baltic Sea. Like many Russian ships of this period, the outbreak of Second Patriotic war and the Russian Revolution delayed these ships from being finished in time."
 RUS_battle_cruiser_2:0 "Poltava Class"
 RUS_battle_cruiser_2_desc:0 "The Poltava-class battlecruisers are authorised in the 1937-43 shipbuilding program and scheduled to be finished in the 1940's. The original design aimed for a large-sized modern heavy cruiser of 23,000 tons, but after information on the latest foreign battlecruiser vessels had arrived, the ships were redesigned to displace to 35,000 tons."
 
@@ -76,8 +76,8 @@ RUS_battleship_1:0 "Sevastopol Class"
 RUS_battleship_1_desc:0 "The Sevastopol-class battleships were Second Patriotic war-era battleships and the first Dreadnoughts to serve in the Imperial Russian Navy. Their design and turret layout served as the basis of all the succeeding battleship and battlecruiser classes. Only four ships survived the chaos of the Russian Revolution. They were modernised and refitted during the 1930's, resulting in a tall almost pagoda-like superstructure. They have modern electronics and a strong AA complement."
 RUS_battleship_2:0 "Vladivostok Class"
 RUS_battleship_2_desc:0 "The Vladivostok-class battleships are designed in the late 1930's to be part of Russian Ocean-Going Navy. The ships displace around 41,000 tons, are armed with nine 406mm cannons in 3 triple turrets, and a secondary armament of twelve 152mm guns. Its good AA armament and thick armour provide a strong defence against air and surface targets. The project elements are used in the Vladimir Monomakh-class battleships."
-RUS_battleship_3:0 "Petrograd Class"
-RUS_battleship_3_desc:0 "The Petrograd-class battleship is a design to match and counter any existing foreign battleships of any potential opponent country. Its nine 406mm cannons in 3 triple turrets are designed to provide adequate firepower, while its 130mm AA guns, thick armour, and large engines can ensure its survival in battle."
+RUS_battleship_3:0 "Peterburg Class"
+RUS_battleship_3_desc:0 "The Peterburg-class battleship is a design to match and counter any existing foreign battleships of any potential opponent country. Its nine 406mm cannons in 3 triple turrets are designed to provide adequate firepower, while its 130mm AA guns, thick armour, and large engines can ensure its survival in battle."
 RUS_battleship_4:0 "Moskva Class"
 RUS_battleship_4_desc:0 "The Moskva-class battleships are intended to provide the Russian Navy with its primary firepower in the new era of naval warfare. They are fast, well-armed, and well-armoured vessels, which have taken all the best from previous Russian battleship projects. There are projects to equip battleships of that class with R-2 series ballistic missiles."
 
@@ -86,8 +86,8 @@ RUS_SH_battleship_1_desc:0 "The Vladimir Monomakh-class is authorised in the 193
 RUS_SH_battleship_2:0 "Ivan Groznyi"
 RUS_SH_battleship_2_desc:0 "The Ivan Groznyi-class battleships are a modified and improved version of the previous Vladimir Monomakh-class. Compared to their predecessors, they carry four triple turrets of the same 406mm caliber cannons, thickened belt armour, a revised layout of secondary guns, and stronger AA armament to counter the increased threat from the carrier-based planes."
 
-RUS_carrier_1:0 "Ismail Class"
-RUS_carrier_1_desc:0 "The Ismail-class aircraft carrier is the direct conversion of the unfinished hull of her Borodino-class battlecruiser namesake. Due to the nature of conversion, the ship has a thick armour belt and strong anti-surface and AA armament for her time. A moderately-sized air group provides her fleet the necessary air cover. The project was not carried out until late 1930-s due to costs and the state of the Russian shipbuilding industry after the revolution and civil war."
+RUS_carrier_1:0 "Borodino Class"
+RUS_carrier_1_desc:0 "The Borodino-class aircraft carrier is the direct conversion of the unfinished hull of her Ismail-class battlecruiser namesake. Due to the nature of conversion, the ship has a thick armour belt and strong anti-surface and AA armament for her time. A moderately-sized air group provides her fleet the necessary air cover. The project was not carried out until late 1930-s due to costs and the state of the Russian shipbuilding industry after the revolution and civil war."
 RUS_carrier_2:0 "Azov Class"
 RUS_carrier_2_desc:0 "The Azov-class aircraft carrier is a design to provide the Russian Navy air projection over its fleets. They are similar in size to the contemporary foreign classes but carry additional secondary guns against surface targets and adequate AA guns for air cover. The increased armour results in a slightly reduced air group compared to foreign counterparts."
 RUS_carrier_3:0 "Narva Class"
