Replace fantasy ministers in the Canadian and Irish event files, and made a few fixes.

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -1153,7 +1153,7 @@ ire.18.t:0 "Irish 1942 elections"
 ire.18.d:0 "Under our current Constitutional Republic, elections must be held every five years. The political factions in our country have consolidated into four different groups, each of which has a chance of winning at the ballot box."
 ire.18.a:0 "A SF, FF and CPNH coalition wins the election!"
 ire.18.b:0 "A CPNH and NCP coalition wins the election!"
-ire.18.c:0 "An SÉ, IWL and AC coalition wins the election!"
+ire.18.c:0 "An SÉ, IWL and RWG coalition wins the election!"
 ire.18.e:0 "A FG, ANH and CÉ coalition wins the election!"
 
 # MacNeill Commission
