Reval now Revel

--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -144,7 +144,7 @@ VICTORY_POINTS_3134:0 "Murmansk"
 VICTORY_POINTS_3137:0 "Tampere"
 VICTORY_POINTS_3140:0 "Tikhvin"
 VICTORY_POINTS_3151:0 "Petrograd"
-VICTORY_POINTS_3152:0 "Revel"
+VICTORY_POINTS_3152:0 "Reval"
 VICTORY_POINTS_3211:0 "Den Haag"
 VICTORY_POINTS_3273:0 "Glasgow"
 VICTORY_POINTS_3320:0 "Vilnius"
