some new city pics, almost done with them now

--- a/localisation/terrain_l_english.yml
+++ b/localisation/terrain_l_english.yml
@@ -146,6 +146,41 @@
  algiers:0 "Urban"
  algiers_desc:0 ""  
  
+ amsterdam:0 "Urban"
+ amsterdam_desc:0 ""
+
+ barcelona:0 "Urban"
+ barcelona_desc:0 ""  
+ 
+ beijing:0 "Urban"
+ beijing_desc:0 "" 
+
+ bristol:0 "Urban"
+ bristol_desc:0 "" 
+
+ glasgow:0 "Urban"
+ glasgow_desc:0 ""
+ 
+ hull:0 "Urban"
+ hull_desc:0 ""
+ 
+ istanbul:0 "Urban"
+ istanbul_desc:0 ""
+ 
+ izmir:0 "Urban"
+ izmir_desc:0 ""
+ 
+ kaunas:0 "Urban"
+ kaunas_desc:0 ""
+ 
+ lodz:0 "Urban"
+ lodz_desc:0 ""
+ 
+ marseille:0 "Urban"
+ marseille_desc:0 ""
+ 
+ newyork:0 "Urban"
+ newyork_desc:0 ""
  
  #Hills ------------------------------------------------------------
  gibraltar:0 "Hills"
@@ -164,6 +199,9 @@
  
  cordoba:0 "Hills"
  cordoba_desc:0 ""  
+ 
+ anzio:0 "Hills"
+ anzio_desc:0 ""  
  
  #Plains ------------------------------------------------------------
  plovdiv:0 "Plains"
@@ -199,7 +237,22 @@
  rostock_desc:0 ""
 
  bratislava:0 "Plains"
- bratislava_desc:0 "" 
+ bratislava_desc:0 ""
+ 
+ baltimore:0 "Plains"
+ baltimore_desc:0 "" 
+ 
+ bruges:0 "Plains"
+ bruges_desc:0 ""
+
+ guam:0 "Plains"
+ guam_desc:0 "" 
+ 
+ havana:0 "Plains"
+ havana_desc:0 ""
+ 
+ kola:0 "Plains"
+ kola_desc:0 ""
  
  #Forest ------------------------------------------------------------ 
 
@@ -228,6 +281,14 @@
  innsbruck:0 "Mountains"
  innsbruck_desc:0 ""  
  
+ capetown:0 "Mountains"
+ capetown_desc:0 "" 
+ 
+ denver:0 "Mountains"
+ denver_desc:0 "" 
+ 
+ hobart:0 "Mountains"
+ hobart_desc:0 "" 
  
  #Jungle ------------------------------------------------------------   
 
